CustomerDAO Test